# totalsize

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pythonpackage.yml  pythonpublish.yml
tests/: test_totalsize.py
totalsize/: __init__.py  total.py
